...
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />


    <EditText
        android:id="@+id/edit_text_radius3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a radius in meters ... "
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
...
