...
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.github.versus.MapsActivity" />
    <Button
        android:id="@+id/near_me_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_background"
        android:textColor="@android:color/white"
        android:text="Near me"
        android:textSize="16sp"
...
